<resources>
    <string name="app_name">GK Money</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="ClickToRegister">Click to Register</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="Register">Register</string>
    <string name="BackToLogin">Back to Login</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="AddNote">Add Note</string>
    <string name="NoteAmount">Amount</string>
    <string name="noteDescription">Description</string>
    <string name="noteDate">Date</string>
    <string name="Add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="All">All</string>
    <string name="CurrentMonth">CurrentMonth</string>
    <string name="action_name">VocabPostGen</string>
    <string-array name="template_array">
        <item>Dark Gradient</item>
        <item>Light Gradient</item>
        <item>Solid Dark</item>
    </string-array>
</resources>