<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    android:padding="15dp"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:background="@drawable/shape"
        android:padding="8dp"
        android:src="@mipmap/gk_money_round_icon_blue" />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Login"
        android:textSize="28sp"
        android:textColor="#1E88E5"
        android:layout_marginBottom="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        android:padding="10dp"
        app:boxStrokeColor="#1E88E5">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="#FFFFFF"
            android:textColor="#212121"

            android:textColorHint="@color/PrimaryBlue"
            android:id="@+id/email"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxStrokeColor="#1E88E5"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColor="#212121"
            android:textColorHint="@color/PrimaryBlue"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@android:color/white"
        android:backgroundTint="#1E88E5"
        app:cornerRadius="16dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:id="@+id/Login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ClickToRegister"
        android:id="@+id/ClickToRegister"
        android:textSize="15sp"
        android:textColor="#1E88E5"
        android:layout_marginBottom="10sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#1E88E5"
        android:id="@+id/ForgetPassword"
        android:text="@string/ForgetPassword"
        android:textSize="15sp"
        android:textStyle="bold" />



</LinearLayout>